			Java Electric change log ( MAIN branch )

NOTE: Please place changes under the version that will be released next.

************************* Version 8.05a: *********************************

BUG: (9/27/06, GVG) Cropping of poly arcs over transistor poly not working (Bug #501)
FIX: The order in which arcs and nodes are cropped is important.

IMP: (9/27/06, GVG) Cleaning XML DRC according to memo published. One 180nm wide spacing rule fixed.

IMP: (9/27/06, DN) LibId/CellId/ExportId contains "external" names. IdManager maintains
    uniqueness of these names. This will be used for reading isolated CellBackups for DELIB library/cell updates.
    Artifact: Renamed cells and cells of renamed libraries are not linked to the database. New objects are created instead.

BUG: (9/26/06, SMR) Rotated nodes with text on them select badly (Bug #1202).
FIX: In Highlighter.findAllInArea(), use same code to select as to display.

IMP: (9/25/06, GVG) Reporting number of layer instances whose geometries are identical in Document Current Technology.
Using DocColumn class to handle the printing on standard output.

IMP: (9/22/06, GVG) Not printing NotInUsed nodes in Document Current Technology".

BUG: (9/22/06, DN) AlphaBlender crashes on narrow images.
FIX: In AlphaBlender.composeLine add return when minInt == maxInt.

IMP: (9/22/06, SMR) Node type in Node Preferences is now selectable (Bug #1218).

BUG: (9/22/06, SMR) "Document Current Technology" crashes.
FIX: In Manipulate.describeTechnology(), remove the lines:
		ai.setExtended(ArcInst.HEADEND, false);
		ai.setExtended(ArcInst.TAILEND, false);
     and change:
		double area = poly.getArea() / ai.getLength();
     to:
		Rectangle2D bounds = poly.getBounds2D();
		double area = Math.min(bounds.getWidth(), bounds.getHeight());

IMP: (9/22/06, GVG) Detecting if zero length arc is covered by other polygon of the same layer and
avoid DRC warning (Bug#1174). Regression data updated.
